[gd_scene load_steps=8 format=3 uid="uid://dluj2hegpfsy7"]

[ext_resource type="Script" path="res://Scripts/ratings.gd" id="1_mqn27"]
[ext_resource type="Texture2D" uid="uid://opp2bfy6o0ic" path="res://BaseStyle/Sprites/Ratings/FRESH.png" id="2_7mmaq"]
[ext_resource type="Texture2D" uid="uid://dqx581p5sechb" path="res://BaseStyle/Sprites/Ratings/AllRatings.png" id="3_rufi3"]
[ext_resource type="FontFile" uid="uid://bl7dl26nc1nyr" path="res://foo.ttf" id="4_bbj6i"]
[ext_resource type="Texture2D" uid="uid://c4ljxmg7c4i1k" path="res://BaseStyle/Sprites/Ratings/GOOD.png" id="5_uqpie"]
[ext_resource type="Texture2D" uid="uid://dj4jvuxppsqx7" path="res://BaseStyle/Sprites/Ratings/BAD.png" id="6_8wg6j"]
[ext_resource type="Texture2D" uid="uid://kwhp76x4d6aw" path="res://BaseStyle/Sprites/Ratings/MISS.png" id="7_m6ccb"]

[node name="Ratings" type="Node2D"]
script = ExtResource("1_mqn27")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FRESH" type="Node2D" parent="."]
visible = false

[node name="FRESH" type="Sprite2D" parent="FRESH"]
position = Vector2(10, 0)
texture = ExtResource("2_7mmaq")

[node name="AllSprites" type="Sprite2D" parent="FRESH"]
position = Vector2(34, 0)
texture = ExtResource("3_rufi3")
hframes = 8
frame = 7

[node name="AllSprites2" type="Sprite2D" parent="FRESH"]
position = Vector2(-33, 0)
texture = ExtResource("3_rufi3")
hframes = 8
frame = 6

[node name="TextEnhancer" type="Node2D" parent="FRESH"]
position = Vector2(-33, 0)
scale = Vector2(0.333, 0.333)

[node name="Combo" type="Label" parent="FRESH/TextEnhancer"]
offset_left = 231.231
offset_top = -33.033
offset_right = 271.231
offset_bottom = -5.03303
theme_override_fonts/font = ExtResource("4_bbj6i")
theme_override_font_sizes/font_size = 54

[node name="GOOD" type="Node2D" parent="."]
visible = false

[node name="GOOD" type="Sprite2D" parent="GOOD"]
position = Vector2(21, 0)
texture = ExtResource("5_uqpie")

[node name="AllSprites" type="Sprite2D" parent="GOOD"]
position = Vector2(25, 0)
texture = ExtResource("3_rufi3")
hframes = 8
frame = 5

[node name="TextEnhancer" type="Node2D" parent="GOOD"]
position = Vector2(-33, 0)
scale = Vector2(0.333, 0.333)

[node name="Combo" type="Label" parent="GOOD/TextEnhancer"]
offset_left = 201.201
offset_top = -33.033
offset_right = 241.201
offset_bottom = -5.03303
theme_override_fonts/font = ExtResource("4_bbj6i")
theme_override_font_sizes/font_size = 56

[node name="BAD" type="Node2D" parent="."]
visible = false

[node name="BAD" type="Sprite2D" parent="BAD"]
position = Vector2(24, 0)
texture = ExtResource("6_8wg6j")

[node name="AllSprites" type="Sprite2D" parent="BAD"]
position = Vector2(20, 0)
texture = ExtResource("3_rufi3")
hframes = 8
frame = 3

[node name="MISS" type="Node2D" parent="."]
visible = false

[node name="MISS" type="Sprite2D" parent="MISS"]
position = Vector2(23, 0)
texture = ExtResource("7_m6ccb")

[node name="AllSprites" type="Sprite2D" parent="MISS"]
position = Vector2(24, 0)
texture = ExtResource("3_rufi3")
hframes = 8

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
